# phobic

./: .gitignore  CLAUDE.md  README.md  demo.ipynb  pyproject.toml  setup.py
docs/: design.md  plan.md
src/phobic/: __init__.py  _module.c  _phobic.c  _phobic.h
tests/: bench_phobic.py  test_phobic.py
