[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phobic"
version = "0.1.0"
description = "Fast minimal perfect hash functions"
readme = "README.md"
license = "MIT"
authors = [{ name = "Alexander Towell", email = "lex@metafunctor.com" }]
requires-python = ">=3.9"
keywords = ["hash", "perfect-hash", "phf", "minimal-perfect-hash", "hashing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/queelius/phobic"

[tool.pytest.ini_options]
testpaths = ["tests"]
